# rustorrent

./: .dockerignore  .gitignore  CONTRIBUTORS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
.cargo/: config
actix-web-static-files/: Cargo.toml
backend/: API.md  Cargo.toml  README.md
backend/src/: cli.rs  event_stream.rs  file_download.rs  login.rs  main.rs  model.rs  sandbox.rs  session.rs  torrents.rs  uploads.rs
backend/static/: piece.html  rsbt.css  rsbt.mjs  sandbox.html  stream.html  upload.html
backend/static/templates/: index.html
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
flat-storage/: Cargo.toml
flat-storage-mmap/: Cargo.toml
flat-storage-mmap/src/: lib.rs
frontend/: Cargo.toml  build.rs
rsbt-web-resources/: Cargo.toml  (+1 more)
rustorrent/: Cargo.toml
rustorrent-web/: Cargo.toml  README.md  build.rs
rustorrent-web/src/: main.rs
rustorrent-web/static/css/: style.css
rustorrent-web/static/files/: package.json
rustorrent-web/static/templates/: index.html
rustorrent/src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs  parser.rs  types.rs
rustorrent/src/announce/: http.rs  mod.rs  udp.rs
rustorrent/src/app/: accept_connections_loop.rs  connect_to_peer.rs  determine_download_mode.rs  download_events_loop.rs  download_torrent.rs  mod.rs  peer_connection.rs  peer_loop.rs  peer_loop_message.rs  process_announce.rs  process_peer_announced.rs  process_peer_connected.rs  process_peer_forwarded.rs  process_peer_interested.rs  process_peer_piece.rs  process_peer_piece_canceled.rs  process_peer_piece_downloaded.rs  process_peer_piece_request.rs  process_peer_pieces.rs  process_peer_unchoke.rs  select_new_peer.rs
rustorrent/src/app/download_torrent/: mod.rs  process_peer_announced.rs  process_peer_interested.rs  process_peer_piece_downloaded.rs
rustorrent/src/commands/: add_torrent.rs  connect_to_peer.rs  download_block.rs  download_next_block.rs  mod.rs  peer_message.rs  piece_downloaded.rs  process_announce.rs  start_announce_process.rs
rustorrent/src/messages/: bitfield.rs  choke.rs  mod.rs  piece.rs  unchoke.rs
rustorrent/src/parser/: bencode.rs  message.rs  mod.rs  peer.rs  udp_tracker.rs
rustorrent/src/storage/: mod.rs
rustorrent/src/types/: bencode.rs  config.rs  info.rs  message.rs  mod.rs  peer.rs  torrent.rs  udp_tracker.rs
rustorrent/tests/: Plan_9_from_Outer_Space_1959_archive.torrent  ferris.gif.torrent  plan_9_parse.rs  samples_parse.rs
service/: Cargo.toml
service/src/: errors.rs  event_loop.rs  event_loop_runner.rs  lib.rs  main.rs  request_response.rs  result.rs  spawn_and_log_error.rs
service/src/announce/: announce.rs  announce_loop.rs  announce_manager.rs  announce_manager_command.rs  announce_manager_message.rs  announce_manager_state.rs  announce_transport.rs  announcement.rs  default_announce_transport.rs  http.rs  mod.rs  udp.rs  udp_tracker_client.rs
service/src/app/: accept_connections_loop.rs  accept_peer_connection.rs  app.rs  connect_to_peer.rs  current_torrents.rs  determine_download_mode.rs  download_events_loop.rs  mod.rs  peer_loop.rs  peer_loop_message.rs  request_response.rs
service/src/app/download_events_loop/: action.rs  add_torrent.rs  current_torrents.rs  delete_torrent.rs  mod.rs  torrent_announces.rs  torrent_detail.rs  torrent_file_download.rs  torrent_files.rs  torrent_peers.rs  torrent_pieces.rs
service/src/app/download_torrent/: mod.rs  process_announce.rs  process_peer_announced.rs  process_peer_connected.rs  process_peer_forwarded.rs  process_peer_piece_canceled.rs  process_peer_piece_downloaded.rs  process_peer_piece_request.rs  process_peer_pieces.rs  process_peer_unchoke.rs
service/src/app/events/: mod.rs
service/src/command/: command.rs  command_add_torrent.rs  command_delete_torrent.rs  command_torrent_action.rs  command_torrent_announce.rs  command_torrent_detail.rs  command_torrent_file_download.rs  command_torrent_files.rs  command_torrent_peers.rs  command_torrent_pieces.rs  mod.rs
service/src/errors/: mod.rs  rsbt_error.rs  try_from_bencode.rs
service/src/event/: mod.rs  torrent_download_mode.rs  torrent_event.rs  torrent_event_loop.rs  torrent_event_query_piece.rs  torrent_statistic_message.rs
service/src/event_loop/: event_loop.rs  event_loop_command.rs  event_loop_message.rs  event_loop_runner.rs  event_loop_sender.rs  mod.rs
service/src/file_download/: file_download_state.rs  file_download_stream.rs  mod.rs
service/src/messages/: mod.rs
service/src/parser/: bencode.rs  message.rs  mod.rs  peer.rs  torrent.rs  udp_tracker.rs
service/src/peer/: connect_to_peer.rs  mod.rs  peer_loop.rs  peer_loop_message.rs  peer_manager.rs  peer_message.rs  peer_state.rs  request_message.rs  torrent_peer_state.rs
service/src/piece/: collect_pieces_and_update.rs  match_pieces.rs  mod.rs
service/src/process/: find_process_by_id.rs  mod.rs  torrent_process.rs  torrent_process_header.rs  torrent_process_status.rs  torrent_token.rs  torrent_token_provider.rs
service/src/statistics/: mod.rs  statistics_manager.rs
service/src/storage/: mod.rs  torrent_piece.rs  torrent_storage.rs  torrent_storage_message.rs  torrent_storage_state.rs
service/src/types/: bencode.rs  config.rs  handshake.rs  info.rs  message.rs  message_codec.rs  message_codec_error.rs  mod.rs  peer.rs  peer_state.rs  properties.rs  torrent.rs  tracker_announce.rs  udp_tracker.rs
service/src/types/configuration/: config.rs  mod.rs  properties.rs  properties_provider.rs
service/src/types/info/: mod.rs  piece_checksum.rs  torrent_info.rs  torrent_info_file_raw.rs  torrent_info_raw.rs
service/src/types/public/: announce_view.rs  file_view.rs  mod.rs  peer_state_view.rs  peer_view.rs  torrent_action.rs  torrent_download_state.rs  torrent_download_view.rs  torrent_statistics_event.rs
service/src/types/udp_tracker/: mod.rs  udp_tracker.rs  udp_tracker_authentication.rs  udp_tracker_codec.rs  udp_tracker_codec_error.rs  udp_tracker_request.rs  udp_tracker_request_data.rs  udp_tracker_response.rs  udp_tracker_response_data.rs  udp_tracker_scrape.rs
service/tests/: samples_parse.rs
(+195 files in other folders)
