[package]
name = "flat-storage-mmap"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

failure = "0.1"
futures = "0.1"

flat-storage = { path = "../flat-storage" }

memmap = "0.7"