[package]
name = "rustorrent-web"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-identity = "0.2"
actix-rt = "1.0"
actix-service = "1.0"
actix-web = { version = "2.0", features = ["rustls"] }
bytes = "0.5"
dotenv = "0.15"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
exitfailure = "0.5"
log = "0.4"
env_logger = "0.7"
rand = "0.7"
rustorrent = { path = "../rustorrent" }
rustorrent-web-resources = { path = "../rustorrent-web-resources" }
actix-web-static-files = "2"
lazy_static = "1.4"
uuid = { version = "0.8", features = [ "v4" ] }
url = "2.1"

# oxide-auth-actix = { git = "https://github.com/HeroicKatora/oxide-auth", branch = "next" }
# oxide-auth = { git = "https://github.com/gzp-crey/oxide-auth", branch = "ring_0.16_actix_web_2.0" }
# oxide-auth-actix = { git = "https://github.com/gzp-crey/oxide-auth", branch = "ring_0.16_actix_web_2.0" }
# oidc = { path = "../../oidc-reqwest" }
oidc = { git = "https://github.com/kilork/oidc-reqwest" }
inth-oauth2 = { git = "https://github.com/kilork/inth-oauth2" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
