[package]
name = "rustorrent"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"

[dependencies]
nom = "5.0"
structopt = "0.2"
console = "0.9"
indicatif = "0.12"
dialoguer = "0.4"
failure = "0.1"
exitfailure = "0.5"
clap-verbosity-flag = "0.2.0"
log = "0.4"
env_logger = "0.6"

hyper = "0.12"
sha-1 = "0.8"
percent-encoding = "1.0"

tokio = "0.1"
tokio-signal = "0.2"
futures = "0.1"
confy = "0.3"
bytes = "0.4"

serde = { version = "1.0", features = ["derive"] }

flat-storage = { path = "../flat-storage" }