[package]
name = "rsbt-service"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"

[dependencies]
nom = "5"
structopt = "0.3"
failure = "0.1"
log = "0.4"

dirs = "2"

sha-1 = "0.8"
percent-encoding = "2"

uuid = { version = "0.8", features = ["v4"] }
rand = "0.7"

http = "0.2"
http-body = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
futures = "0.3"
bytes = "0.5"

serde = { version = "1.0", features = ["derive"] }

flat-storage = { path = "../flat-storage" }
flat-storage-mmap = { path = "../flat-storage-mmap" }